CLA-214 - Modal content is mostly aligned... I will have to make sure all modal share all these styles as i have to write this same CSS 3x over it seems...

--- a/cla-frontend-corporate-console/src/ionic/theme/styles.scss
+++ b/cla-frontend-corporate-console/src/ionic/theme/styles.scss
@@ -75,8 +75,11 @@ ion-menu {
       }
     }
   }
-  .item-md.item-block .item-inner {
-    border-bottom: 0;
+
+  .item-md {
+    &.item-block .item-inner {
+      border-bottom: 0;
+    }
   }
 
   .scroll-content {
